# ai_meetings

./: .cleanup-summary.md  .dockerignore  .gitignore  CHANGELOG.md  CLI_IMPLEMENTATION_SUMMARY.md  CLI_USAGE.md  COLOR_SCHEME.md  DOCS.md  Dockerfile.backend  Dockerfile.frontend  FEATURES.md  MARKDOWN_SUPPORT.md  MENTION_FEATURE.md  PERFORMANCE_TUNING.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  USAGE_EXAMPLES.md  VISUAL_GUIDE.md  WEB_INTERFACE_GUIDE.md  docker-compose.yml  install_web.sh  nginx.conf  pyproject.toml  requirements-web.txt  restart_frontend.sh  start_web.sh  test_web_api.py
docs/: role_templates.md
examples/: cli_demo.sh  role_templates_example.py
src/: __init__.py  __main__.py  exceptions.py
src/adapters/: __init__.py  anthropic_adapter.py  base.py  factory.py  glm_adapter.py  google_adapter.py  openai_adapter.py
src/cli/: __init__.py  agent_commands.py  main.py  meeting_commands.py
src/models/: __init__.py  agent.py  meeting.py  message.py  role_templates.py
src/services/: __init__.py  agent_service.py  context_builder.py  interfaces.py  (+2 more)
tests/: __init__.py  conftest.py  mock_adapter.py  test_agent_service.py  test_agent_service_templates.py  test_cli_integration.py  test_meeting_service.py  test_models.py  test_properties_adapters.py  test_properties_agent_service.py  test_properties_meeting_service.py  test_properties_models.py  test_properties_storage.py  test_role_templates.py  test_serialization.py
web-frontend/: .gitignore  INSTALL.md  index.html  package-lock.json  package.json  vite.config.js
(+30 files in other folders)
